skills/flightdeck/lib/flightdeck-dashboard/tests/snapshots/snapshot_overview__overview_motion_t0.snap
---
source: tests/snapshot_overview.rs
expression: render_model(&model)
---
"┌ flightdeck-dashboard ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Flightdeck  session demo-mixed  owner pi · %25 · /repo/demo  daemon: unknown  elapsed 2h25m  AH:1 ISS:1 WF:1  prompting:1 submitting:1 waiting:1                                                     │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ tabs ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│ Overview │ Live feed │ Conversations │ Conflicts & merges │ Decisions │ Daemon                                                                                                                       │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌ left rail ───────────────┐┌ sessions ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐┌ selected detail ─────────────────────────┐"
"│States                    ││Kind    State        Harness    Title                     PR/worktree               Age      Last decision        Last activit││Fix dashboard state reader                │"
"│prompting    1            ││ISS ⠋   prompting    opencode   Fix dashboard state reade PR #44 · vst-101          1h35m    cleanup-prompt       4m          ││id VST-101                                │"
"│submitting   1            ││AH ⠋    waiting      pi         Watch daemon logs         —                         2h10m    —                    4m          ││kind issue  state prompting               │"
"│waiting      1            ││WF ⠋    submitting   codex      Build Rust dashboard      —                         58m      bash-permission-prom 4m          ││substate cleanup prompt                   │"
"│                          ││                                                                                                                              ││pane %41                                  │"
"│Merge queue               ││                                                                                                                              ││cwd /repo/worktrees/vst-101               │"
"│• VST-101                 ││                                                                                                                              ││                                          │"
"│• VST-102                 ││                                                                                                                              ││Issue domain                              │"
"│                          ││                                                                                                                              ││issue VST-101                             │"
"│Conflict graph            ││                                                                                                                              ││PR #44                                    │"
"│• VST-101 ↔ VST-102       ││                                                                                                                              ││worktree /repo/worktrees/vst-101          │"
"│                          ││                                                                                                                              ││scope declared=5 actual=7                 │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││Last decision                             │"
"│                          ││                                                                                                                              ││cleanup-prompt → NO — sibling worktree    │"
"│                          ││                                                                                                                              ││still live                                │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"│                          ││                                                                                                                              ││                                          │"
"└──────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────┘"
" Tab/Shift+Tab tabs  j/k select  r reload  Alt+M compact  ? help  q quit                                                                                                                                "
"                                                                                                                                                                                                        "
